--- a/MyApp/src/app/component/customer-reg/customer-reg.component.html
+++ b/MyApp/src/app/component/customer-reg/customer-reg.component.html
@@ -216,7 +216,7 @@
                                 Register
                             </button>
                             <button type="reset" class="btn btn-secondary" id="ResetForm">
-                                ResetForm
+                                Reset
                             </button>
                         </div>
                     </form>
