--- a/MyApp/src/app/component/service-engineer/service-engineer.component.html
+++ b/MyApp/src/app/component/service-engineer/service-engineer.component.html
@@ -168,7 +168,7 @@
                                 Register
                             </button>
                             <button type="reset" class="btn btn-secondary" id="ResetButton">
-                                Reset Form
+                                Reset
                             </button>
                         </div>
                     </form>
