--- a/MyApp/src/app/component/header/header.component.html
+++ b/MyApp/src/app/component/header/header.component.html
@@ -15,8 +15,8 @@
                             aria-haspopup="true" aria-expanded="false"><i class="fas fa-users"></i>Customer</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown04">
                             <a class="dropdown-item" routerLink="createcustomer"  (click)="createCustomer()" >Create Customer</a>
-                            <a class="dropdown-item" routerLink="customerdetails"(click)="customerDetails()">Customer Details</a>
-                            <a class="dropdown-item" routerLink="updateCustomer1" (click)="updateCustomer()">Update Customer</a>
+                            <!-- <a class="dropdown-item" routerLink="customerdetails"(click)="customerDetails()">Customer Details</a> -->
+                            <a class="dropdown-item" routerLink="updateCustomer1" (click)="updateCustomer()">Customer Details</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown">
@@ -25,8 +25,8 @@
                             Engineer</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown04">
                             <a class="dropdown-item" routerLink="createserviceEngineer" routerLinkActive="active"  [routerLinkActiveOptions]="{ exact: true }" (click)="serviceEngg()">Create Service Engineer</a>
-                            <a class="dropdown-item" routerLink="serviceEngglist"(click)="serviceEnggDetail()">Service Engineer Details</a>
-                            <a class="dropdown-item" routerLink="updateserviceEngineer"(click)="serviceEnggUpdate()">Update Service Engineer</a>
+                            <!-- <a class="dropdown-item" routerLink="serviceEngglist"(click)="serviceEnggDetail()">Service Engineer Details</a> -->
+                            <a class="dropdown-item" routerLink="updateserviceEngineer"(click)="serviceEnggUpdate()">Service Engineer Details</a>
                         </div>
                     </li>
 
