--- a/MyApp/src/app/component/CUSTOMERS/view-previous-complaint/view-previous-complaint.component.html
+++ b/MyApp/src/app/component/CUSTOMERS/view-previous-complaint/view-previous-complaint.component.html
@@ -40,7 +40,7 @@
                                     {{user.c_desc}}
                                 </td>
                                 <td>
-                                    {{user.c_date}}
+                                    {{user.c_date | date:'dd/MM/yyy'}}
 
                                 </td>
                                 <td>{{user.c_status}}</td>
