--- a/MyApp/src/app/component/view-all-complaints/view-all-complaints.component.css
+++ b/MyApp/src/app/component/view-all-complaints/view-all-complaints.component.css
@@ -19,7 +19,7 @@ thead {
     float: right!important;
 }
 
-button {
+#button2 {
     width: 50px;
     height: 35px;
 }
@@ -41,7 +41,47 @@ button {
     transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
 }
 
+
+/*
 button,
 input {
     overflow: visible;
+}
+*/
+
+#button1 {
+    width: 100%;
+    font-size: 16px;
+    /* background: linear-gradient(#b3d9ff 5%, #E9F3F6  100%);
+	border: 1px solid #e5a900; */
+    font-weight: bold;
+    cursor: pointer;
+    border-radius: 5px;
+    outline: none;
+}
+
+.modal-header,
+h4 {
+    /* background-color: #5cb85c;
+    color: white !important;
+   */
+    text-align: center;
+    align-items: center;
+    font-size: 20px;
+}
+
+h4 {
+    margin-left: 50px;
+}
+
+.modal-footer {
+    background-color: #f9f9f9;
+}
+
+.modal-body {
+    padding: 40px 50px;
+}
+
+.btn-danger {
+    width: 30%;
 }
