--- a/MyApp/src/app/component/CUSTOMERS/cust-raise-complaint/cust-raise-complaint.component.html
+++ b/MyApp/src/app/component/CUSTOMERS/cust-raise-complaint/cust-raise-complaint.component.html
@@ -58,31 +58,9 @@
                             </ng-container>
                         </div>
 
-                        <div id="serviceEnggModal" class="modal fade" role="dialog">
-                            <div class="modal-dialog">
-
-                                <!-- Modal content-->
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                    </div>
-                                    <div class="modal-body">
-                                        <div class="alert alert-success fade show" *ngIf="showSuccessMsg">
-                                            <strong>Success!</strong>Registration Successfully!
-                                        </div>
-                                        <div class="alert alert-danger fade show" *ngIf="showInvalidMsg">
-                                            <strong>Error! </strong>The email address or phone number you have entered is already registered!.
-                                        </div>
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button type="button" class="btn btn-dark" data-dismiss="modal">Close</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
 
                         <div class="form-group">
-                            <button type="submit" class="btn btn-primary" id="Registerbutton" data-toggle="modal" data-target="#serviceEnggModal" [disabled]="!formGroup.valid">
+                            <button type="submit" class="btn btn-primary" id="Registerbutton" data-dismiss="modal" [disabled]="!formGroup.valid">
                                 Register
                             </button>
                             <button type="reset" class="btn btn-secondary" id="ResetButton">
