--- a/MyApp/src/app/component/chart/chart.component.css
+++ b/MyApp/src/app/component/chart/chart.component.css
@@ -8,15 +8,15 @@ margin-top: 20px;
 .row1{
   margin-top: 0px;
 }
-.chart-container{
+.charts{
  /* margin-left: 10px; */
-  height:35vh; 
-  width:35vw;
+  height:40vh; 
+  width:30vw;
   position: relative;
   /* height: auto; */
   /* width: auto; */
   margin-top: 30px !important;
-  margin-bottom: 80px;
+  /* margin-bottom: 80px; */
   float: left;
   margin-left: 0px;
 }
@@ -51,8 +51,8 @@ margin-top: 20px;
   /* height: 100%; */
   border-radius: 5px;
 }
-.status{
+/* .status{
   margin-top: 50px;
   height: 50%;
   border-radius: 5px;
-}
+} */
