--- a/MyApp/src/app/component/header/header.component.css
+++ b/MyApp/src/app/component/header/header.component.css
@@ -1,32 +1,20 @@
-#barchart2{
-    height: auto;
-    width: 30%;
-    padding: 20px;
-    margin-top: 70px;
-    margin-left: 50px;
-    display: inline-block;
-  }
-  
-  #piechart12{
-    height: auto;
-    width: 30%;
-    padding: 20px;
-    margin-left: 50px;
-    margin-top: 70px;
-    margin-bottom:70px;
-    display: inline-block;
-  
-  }
   #p1{
     text-align: center;
   }
+  /* #topheader{
+    background-color: black;
+    color: green;
+  } */
     nav
   {
     padding-top: 15px !important;
-  padding-bottom: 15px !important;
-  
+    padding-bottom: 15px !important;  
   } 
-  
+  /* .navbar{
+    background-color: #82c341;
+    color: #000000;
+  } */
+
   .fas{
   margin-left: 10px !important;
   margin-right: 10px !important;
