--- a/MyApp/src/app/component/login/login.component.html
+++ b/MyApp/src/app/component/login/login.component.html
@@ -74,9 +74,9 @@
                     <button type="submit" class="btn btn-success btn-block"><span><i class="fas fa-sign-in-alt"></i></span> Submit</button>
                 </form>
             </div>
-            <div class="modal-footer">
+            <!-- <div class="modal-footer">
                 <button type="submit" class="btn btn-danger " data-dismiss="modal"><span><i class="fas fa-times-circle"></i></span> Cancel</button>
-            </div>
+            </div> -->
         </div>
     </div>
 </div>
