--- a/MyApp/src/app/component/CUSTOMERS/view-previous-complaint/view-previous-complaint.component.html
+++ b/MyApp/src/app/component/CUSTOMERS/view-previous-complaint/view-previous-complaint.component.html
@@ -41,9 +41,10 @@
                                 </td>
                                 <td>
                                     {{ user.c_date | date:'dd/MM/yyy'}}
-
                                 </td>
-                                <td>{{user.c_status}}</td>
+                                <td>
+                                    {{user.c_status}}
+                                </td>
                             </tr>
                         </tbody>
                     </table>
