--- a/MyApp/src/app/component/CUSTOMERS/cust-header/cust-header.component.html
+++ b/MyApp/src/app/component/CUSTOMERS/cust-header/cust-header.component.html
@@ -1,8 +1,4 @@
-<ngx-spinner [fullScreen]="true" type="ball-clip-rotate-multiple" size="medium">
-
-</ngx-spinner>
-
-<!-- Navigation -->
+<ngx-spinner [fullScreen]="true" type="ball-clip-rotate-multiple" size="medium"></ngx-spinner>
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top row " id="topheader">
     <div class="col-md-8">
 
@@ -17,13 +13,9 @@
                 </li>
                 <li class="nav-item">
                     <a class="notification" id="a1" routerLink="app-view-previous-complaint" (click)="loader()"> <i class="far fa-clipboard"></i> View Previous Complaint</a>
-
                 </li>
-
             </ul>
         </div>
-
-
     </div>
     <div class="col-md-4">
         <div class="collapse navbar-collapse float-right" id="ftco-nav">
@@ -45,9 +37,6 @@
             </ul>
         </div>
     </div>
-
-
-
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="oi oi-menu"></span> <b>Menu</b>
     </button>
