--- a/MyApp/src/app/component/CUSTOMERS/cust-raise-complaint/cust-raise-complaint.component.html
+++ b/MyApp/src/app/component/CUSTOMERS/cust-raise-complaint/cust-raise-complaint.component.html
@@ -24,12 +24,9 @@
                                 </div>
                             </ng-container>
                         </div>
-
-
-
                         <div class="form-group">
-                            <label>Engineer Type<p class="p12">*</p></label>
-                            <!-- <input  class="custom-select" (change)="changeCity($event)" formControlName="Machine_purchase" placeholder="select Machine"> -->
+                            <label>Engineer Type<p class="p12">*</p>
+                            </label>
                             <select class="form-control" formControlName="EngineerType" placeholder=" Choose Engineer">
                                 <option value="">Choose engg type</option>
                                 <option *ngFor="let engg of enggList; let i= index" value="{{engg.key}}" [selected]="i == 0">{{engg.name}}</option>
@@ -48,7 +45,6 @@
                         <div class="form-group">
                             <label>Problem Starting Date<p class="p12">*</p></label>
                             <input type="text" class="form-control" formControlName="DateOfjoining" placeholder="MM/DD/YYYY" bsDatepicker [bsConfig]="{ isAnimated: true }" [maxDate]="maxDate" [ngClass]="{ 'is-invalid': submitted && f.DateOfjoining.errors?.invalid }">
-                            <!-- <i class="fa fa-calendar"></i> -->
                         </div>
                         <div class="validation-errors">
                             <ng-container *ngFor="let validation of validation_messages.DateOfjoining">
@@ -57,8 +53,6 @@
                                 </div>
                             </ng-container>
                         </div>
-
-
                         <div class="form-group">
                             <button type="submit" class="btn btn-primary" id="Registerbutton" data-dismiss="modal" [disabled]="!formGroup.valid">
                                 Register
