--- a/MyApp/src/app/component/header/header.component.html
+++ b/MyApp/src/app/component/header/header.component.html
@@ -1,72 +1,62 @@
 <ngx-spinner [fullScreen]="true" type="ball-clip-rotate-multiple" size="medium">
 </ngx-spinner>
+<nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top row " id="topheader">
+    <div class="col-md-8">
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top row " id="topheader">
-        <div class="col-md-8">
-
-            <div class="collapse navbar-collapse float-left" id="ftco-nav">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                         <a class="navbar-brand" routerLink="/home1"(click)="showButton(2)" [class.phase-active]="activeButton === 2" > <i class="fas fa-home"></i>Ticketing Tool</a>                       
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" 
-                            aria-haspopup="true" aria-expanded="false"><i class="fas fa-users"></i>Customer</a>
-                        <div class="dropdown-menu" aria-labelledby="dropdown04">
-                            <a class="dropdown-item" routerLink="createcustomer"  (click)="createCustomer()" >Create Customer</a>
-                            <a class="dropdown-item" routerLink="customerdetails"(click)="customerDetails()">Customer Details</a>
-                            <a class="dropdown-item" routerLink="updateCustomer1" (click)="updateCustomer()">Update Customer</a>
-                        </div>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown"
-                            aria-haspopup="true" aria-expanded="false"><i class="fas fa-users-cog"></i>Service
+        <div class="collapse navbar-collapse float-left" id="ftco-nav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="navbar-brand" routerLink="/home1" (click)="showButton(2)" [class.phase-active]="activeButton === 2"> <i class="fas fa-home"></i>Ticketing Tool</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-users"></i>Customer</a>
+                    <div class="dropdown-menu" aria-labelledby="dropdown04">
+                        <a class="dropdown-item" routerLink="createcustomer" (click)="createCustomer()">Create Customer</a>
+                        <a class="dropdown-item" routerLink="customerdetails" (click)="customerDetails()">Customer Details</a>
+                        <a class="dropdown-item" routerLink="updateCustomer1" (click)="updateCustomer()">Update Customer</a>
+                    </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-users-cog"></i>Service
                             Engineer</a>
-                        <div class="dropdown-menu" aria-labelledby="dropdown04">
-                            <a class="dropdown-item" routerLink="createserviceEngineer" routerLinkActive="active"  [routerLinkActiveOptions]="{ exact: true }" (click)="serviceEngg()">Create Service Engineer</a>
-                            <a class="dropdown-item" routerLink="serviceEngglist"(click)="serviceEnggDetail()">Service Engineer Details</a>
-                            <a class="dropdown-item" routerLink="updateserviceEngineer"(click)="serviceEnggUpdate()">Update Service Engineer</a>
-                        </div>
-                    </li>
+                    <div class="dropdown-menu" aria-labelledby="dropdown04">
+                        <a class="dropdown-item" routerLink="createserviceEngineer" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" (click)="serviceEngg()">Create Service Engineer</a>
+                        <a class="dropdown-item" routerLink="serviceEngglist" (click)="serviceEnggDetail()">Service Engineer Details</a>
+                        <a class="dropdown-item" routerLink="updateserviceEngineer" (click)="serviceEnggUpdate()">Update Service Engineer</a>
+                    </div>
+                </li>
 
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown"
-                            aria-haspopup="true" aria-expanded="false"> <i class="fas fa-list-ul"></i>
-                            Complaints</a>
-                        <div class="dropdown-menu" aria-labelledby="dropdown04">
-                            <a class="dropdown-item" routerLink="app-view-all-complaints" (click)="assign_complaint()">View Complaints</a>
-                            <a class="dropdown-item" routerLink="app-assign-complaint" (click)="assign_complaint()">Assign Complaints</a>
-                        </div>
-                    </li>
-                </ul>
-            </div>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="fas fa-list-ul"></i> Complaints
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="dropdown04">
+                        <a class="dropdown-item" routerLink="app-view-all-complaints" (click)="assign_complaint()">View Complaints</a>
+                        <a class="dropdown-item" routerLink="app-assign-complaint" (click)="assign_complaint()">Assign Complaints</a>
+                    </div>
+                </li>
+            </ul>
         </div>
-        <div class="col-md-4">
-            <div class="collapse navbar-collapse float-right" id="ftco-nav">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a href="#" class="notification">
-                            <span>Notification</span>
-                            <i class="fas fa-bell">  <span class="badge">3</span></i>  
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="notification">
-                            <span>Logout</span>
-                            <i class="fas fa-sign-out-alt"></i>
-                        </a>
-                    </li>
-                </ul>
-            </div>
+    </div>
+    <div class="col-md-4">
+        <div class="collapse navbar-collapse float-right" id="ftco-nav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a href="#" class="notification">
+                        <span>Notification</span>
+                        <i class="fas fa-bell">  <span class="badge">3</span></i>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="notification">
+                        <span>Logout</span>
+                        <i class="fas fa-sign-out-alt"></i>
+                    </a>
+                </li>
+            </ul>
         </div>
-
-
-
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
-        aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+    </div>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="oi oi-menu"></span> <b>Menu</b>
     </button>
 
-    </nav>
-    
+</nav>
