--- a/MyApp/src/app/component/service-engineer/engg-home/engg-home.component.css
+++ b/MyApp/src/app/component/service-engineer/engg-home/engg-home.component.css
@@ -1,112 +1,81 @@
-.router-container{
-  margin-top: 120px;
-  margin-bottom: 80px;
+.router-container {
+    margin-top: 120px;
+    margin-bottom: 80px;
 }
 
-#barchart2{
-  height: auto;
-  width: 30%;
-  padding: 20px;
-  margin-top: 70px;
-  margin-left: 50px;
-  display: inline-block;
+#p1 {
+    text-align: center;
 }
 
-#piechart12{
-  height: auto;
-  width: 30%;
-  padding: 20px;
-  margin-left: 50px;
-  margin-top: 70px;
-  margin-bottom:70px;
-  display: inline-block;
-
-}
-#p1{
-  text-align: center;
-}
 footer {
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  height:10px ;
-padding-top: 20px !important;
-padding-bottom: 40px !important;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 10px;
+    padding-top: 20px !important;
+    padding-bottom: 40px !important;
 }
-nav
-{
-  padding-top: 15px !important;
-padding-bottom: 15px !important;
 
-} 
-
-.fas{
-margin-left: 10px !important;
-margin-right: 10px !important;
-
+nav {
+    padding-top: 15px !important;
+    padding-bottom: 15px !important;
 }
- .nav-link.dropdown-toggle {
-  background-color: #343a40;
-  color: white;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
+
+.fas {
+    margin-left: 10px !important;
+    margin-right: 10px !important;
+}
+
+.nav-link.dropdown-toggle {
+    background-color: #343a40;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
 }
 
 .nav-item.dropdown {
-  position: relative;
-  display: inline-block;
+    position: relative;
+    display: inline-block;
 }
-/*
-.dropdown-menu{
-  display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-/*/
+
 .dropdown-menu a {
-  
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
 }
 
- 
 .navbar-brand.badge {
-  display: inline-block;
-  padding-top: .3125rem;
-  padding-bottom: .3125rem;
-  margin-right: 1rem;
-  font-size: 1rem;
-  line-height: inherit;
-  white-space: nowrap;
+    display: inline-block;
+    padding-top: .3125rem;
+    padding-bottom: .3125rem;
+    margin-right: 1rem;
+    font-size: 1rem;
+    line-height: inherit;
+    white-space: nowrap;
 }
-.navbar-brand  :hover{background-color: #3e8e41;}
 
+.navbar-brand :hover {
+    background-color: #3e8e41;
+}
 
-.col-md-2{
-position: relative !important;
- width: 100% !important;  
-padding-left: 0px !important;
-margin-top: 8px;
+.col-md-2 {
+    position: relative !important;
+    width: 100% !important;
+    padding-left: 0px !important;
+    margin-top: 8px;
 }
 
 .col-md-4 {
-  -webkit-box-flex: 0;
-  flex-direction: row-reverse  !important;
-  max-width: width 100% !important;
-  display: flex;
-  margin-top: 14px;
+    -webkit-box-flex: 0;
+    flex-direction: row-reverse !important;
+    max-width: width 100% !important;
+    display: flex;
+    margin-top: 14px;
 }
-/* .row{
-  width: 100%;
-  max-width: 1600px !important;
-} */
-.container{
-  margin-left: 0px !important;
-  margin-right: 0px !important;
+
+.container {
+    margin-left: 0px !important;
+    margin-right: 0px !important;
 }
