--- a/MyApp/src/app/component/CUSTOMERS/customer-list/customer-list.component.css
+++ b/MyApp/src/app/component/CUSTOMERS/customer-list/customer-list.component.css
@@ -8,13 +8,15 @@ h3 {
 }
 .btn {
     border-radius: 10px;
+    margin: 5px;
+}
+.dropdown-menu{
+    text-align: center;
+    min-width: 0;
 }
 .table {
-    /* margin-left: 20px; */
-    /* margin-right: 20px; */
     margin-top: 20px;
     border: 1px solid black;
-    /* table-layout: fixed; */
     }
 .table td,th{
     border: 1px solid #ddd;
@@ -59,7 +61,3 @@ h3 {
 .btn-danger:focus {
     background: #ee3535;
 }
-/* .container{
-    margin: 30px;
-    margin-left: 40px;
-} */
