--- a/MyApp/src/app/component/CUSTOMERS/customer-list/customer-list.component.html
+++ b/MyApp/src/app/component/CUSTOMERS/customer-list/customer-list.component.html
@@ -1,13 +1,14 @@
 <link href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round" rel="stylesheet">
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 <div class="container-fluid">
     <h3>List All Customer</h3>
     <div class="row">
-        <input type="text" class="form-control" placeholder="Start searching for a customer Name or Mobilenumber or Email" name="search" [(ngModel)]="u_email" autocomplete="off">
+        <input type="text" class="form-control"
+            placeholder="Start searching for a customer Name or Mobilenumber or Email" name="search"
+            [(ngModel)]="u_email" autocomplete="off">
     </div>
-
     <table class="table">
         <thead>
             <tr>
@@ -19,9 +20,7 @@
                 <th scope="col">Machine Purchased</th>
                 <th scope="col">Purchase Date</th>
                 <th scope="col">Password</th>
-                <th scope="col">Edit Customer</th>
-                <th scope="col">Delete Customer</th>
-                <th scope="col">View Customer</th>
+                <th scope="col">Action</th>
             </tr>
         </thead>
         <tbody>
@@ -34,16 +33,25 @@
                 <td>{{item.u_MachinePurchased}}</td>
                 <td>{{item.u_dateOf_Purchased|date:'dd/MM/yyy'}}</td>
                 <td>{{item.u_password}}</td>
-                <td><button type="button" class="btn btn-primary btn-sm" [routerLink]="['edit',item.u_id]" (click)="customerEdit()">Edit</button></td>
-                <td><button type="button" class="btn btn-danger btn-sm ml-1" (click)="openModal(item)">Delete</button></td>
-                <td><button type="button" class="btn btn-primary btn-md" [routerLink]="['view',item.u_id]" (click)="viewCustomer()">View</button></td>
-            </tr>
+                <td>
+                    <div class="dropdown">
+                        <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+                            Action
+                        </button>
+                        <div class="dropdown-menu">
+                            <button type="button" class="btn btn-primary btn-sm " [routerLink]="['edit',item.u_id]"
+                                (click)="customerEdit()" style="margin-top: 5;margin-bottom: 5px;">Edit</button>
+                            <button type="button" class="btn btn-danger btn-sm ml-1 " (click)="openModal(item)"
+                                style="margin-top: 5;margin-bottom: 5px;">Delete</button>
+                            <button type="button" class="btn btn-primary btn-md " [routerLink]="['view',item.u_id]"
+                                (click)="viewCustomer()" style="margin-top: 5px">View</button>
+                        </div>
+                    </div>
+                    </td>
         </tbody>
     </table>
 </div>
-
 <router-outlet></router-outlet>
-
 <div id="deleteModal" class="modal fade" role="dialog">
     <div class="modal-dialog modal-confirm">
         <div class="modal-content">
@@ -55,11 +63,10 @@
                 <p>Do you really want to delete these records? This process cannot be undone.</p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-info" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-danger" data-dismiss="modal" name="delete" (click)="delete(item)">Delete</button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-danger" data-dismiss="modal" name="delete"
+                    (click)="delete(item)">Delete</button>
             </div>
         </div>
     </div>
 </div>
-
-
