--- a/MyApp/src/app/component/chart/chart.component.html
+++ b/MyApp/src/app/component/chart/chart.component.html
@@ -5,22 +5,22 @@
 <div class="container">
   <div class="row row1">
     <div class="col-md-3 offset-md-3 ">
-      <div class="box box1">
+      <button class="btn btn-success box1">
         <span class="count"> {{userCount1}}</span><span><i class="fa fa-users" aria-hidden="true"></i></span><br>
         <span class="lable">Users</span>
-      </div>
+      </button>
     </div>
     <div class="col-md-3">
-      <div class="box box2">
+      <button class="btn btn-primary box2">
         <span class="count">{{enggCount1}}</span><span><i class="fa fa-users" aria-hidden="true"></i></span><br>
         <span class="lable">Engineers</span>
-      </div>
+      </button>
     </div>
     <div class="col-md-3">
-      <div class="box box3">
+      <button class="btn btn-warning box3">
         <span class="count">{{adminCount1}}</span><span><i class="fa fa-users" aria-hidden="true"></i></span><br>
         <span class="lable">Admin</span>
-      </div>
+      </button>
     </div>
   </div>
   <!--second Row  -->
