--- a/MyApp/src/app/component/chart/chart.component.html
+++ b/MyApp/src/app/component/chart/chart.component.html
@@ -2,46 +2,53 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 
 <body>
-    <div class="container">
-        <div class="row row1">
-            <div class="col-md-3 offset-md-3 ">
-                <div class="box box1">
-                    <span class="count"> {{userCount1}}</span><span><i class="fa fa-users" aria-hidden="true"></i></span><br>
-                    <span class="lable">Users</span>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="box box2">
-                    <span class="count">{{enggCount1}}</span><span><i class="fa fa-users" aria-hidden="true"></i></span><br>
-                    <span class="lable">Engineers</span>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="box box3">
-                    <span class="count">{{adminCount1}}</span><span><i class="fa fa-users" aria-hidden="true"></i></span><br>
-                    <span class="lable">Admin</span>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-6">
-                <div class=" panel panel-default">
-                    <div class="panel-body">
-                        <div class="chart-container">
-                            <canvas id="complaintsStatusCart"></canvas>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="panel panel-default">
-                    <div class="panel-body">
-                        <div class="chart-container">
-                            <canvas id="canvas"></canvas>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+  <div class="container">
+    <div class="row row1">
+      <div class="col-md-3 offset-md-3 ">
+        <button class="btn btn-success" (click)="userCount()">
+          <span class="count"> {{userCount1}}</span><span><i class="fa fa-users" aria-hidden="true"></i></span><br>
+          <span class="lable">Users</span>
+        </button>
+      </div>
+      <div class="col-md-3">
+        <button class="btn btn-primary"  (click)="enggCount()">
+          <span class="count">{{enggCount1}}</span><span><i class="fa fa-users" aria-hidden="true"></i></span><br>
+          <span class="lable">Engineers</span>
+        </button>
+      </div>
+      <div class="col-md-3">
+        <button class="btn btn-warning">
+          <span class="count">{{adminCount1}}</span><span><i class="fa fa-users" aria-hidden="true"></i></span><br>
+          <span class="lable">Admin</span>
+        </button>
+      </div>
     </div>
-</body>
+    <div class="row">
+      <div class="col-md-6">
+        <div class=" panel panel-default">
+          <div class="panel-body">
+            <div class="chart-container">
+              <canvas id="complaintsStatusCart"></canvas>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="panel panel-default">
+          <div class="panel-body">
+            <div class="chart-container">
+              <canvas id="canvas"></canvas>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  </body>
+  
+  
+  
+  
+  
+  
+  
