--- a/MyApp/src/app/component/service-engineer/engg-header/engg-header.component.css
+++ b/MyApp/src/app/component/service-engineer/engg-header/engg-header.component.css
@@ -13,8 +13,8 @@ nav {
 }
 
 .nav-link.dropdown-toggle {
-    background-color: #343a40;
-    color: white;
+    background-color: #82c341 !important;
+    color: #000000 !important;
     padding: 16px;
     font-size: 16px;
     border: none;
@@ -33,7 +33,7 @@ nav {
 }
 
 .dropdown-menu a:hover {
-    background-color: rgb(30, 135, 233);
+    background-color: rgb(128, 161, 252);
 }
 
 .nav-item.dropdown :hover .dropdown-content {
@@ -41,7 +41,7 @@ nav {
 }
 
 .nav-item.dropdown :hover.nav-link.dropdown-toggle {
-    background-color: #3e8e41;
+    background-color: rgb(128, 161, 252) !important;
 }
 
 .container {
@@ -49,31 +49,51 @@ nav {
     margin-right: 0px !important;
 }
 
+nav {
+    background-color: #82c341 !important;
+    color: #000000 !important;
+}
+
 .navbar-brand {
-    color: white;
     text-decoration: none;
     padding: 12px 23px;
     position: relative;
     display: inline-block;
     border-radius: 2px;
+    color: #000000 !important;
 }
 
 .navbar-brand:hover {
-    background: #3e8e41;
+    background-color: rgb(128, 161, 252)!important;
 }
 
 .notification {
-    color: white;
+    background-color: #82c341!important;
+    color: #000000 !important;
     text-decoration: none;
     padding: 8px 10px;
     position: relative;
     display: inline-block;
     border-radius: 2px;
-    margin-top: 8px;
 }
 
 .notification:hover {
-    background: #3e8e41;
+    background-color: rgb(128, 161, 252) !important;
+}
+
+.Logout {
+    background-color: #82c341!important;
+    color: #000000 !important;
+    text-decoration: none;
+    padding: 8px 10px;
+    margin-left: 15px !important;
+    position: relative;
+    display: inline-block;
+    border-radius: 1px;
+}
+
+.Logout:hover {
+    background-color: rgb(128, 161, 252) !important;
 }
 
 .fas .badge {
@@ -104,8 +124,12 @@ i {
     background-color: #3e8e41;
 }
 
-img {
-    display: block;
-    margin: auto;
-    width: 20%;
+.phase-active {
+    background-color: #3e8e41;
+    border-radius: 1px;
+    box-shadow: 0 0 1px 2px hsla(0, 0%, 100%, .8);
+}
+
+.active {
+    background-color: #3e8e41;
 }
