--- a/MyApp/src/app/component/CUSTOMERS/cust-footer/cust-footer.component.css
+++ b/MyApp/src/app/component/CUSTOMERS/cust-footer/cust-footer.component.css
@@ -1,8 +1,10 @@
 footer {
+    background-color: #82c341!important;
+    color: #000000 !important;
     position: fixed;
     bottom: 0;
-    width:  100%;
-    height:10px ;
-  padding-top: 20px !important;
-  padding-bottom: 40px !important;
-  }
+    width: 100%;
+    height: 10px;
+    padding-top: 20px !important;
+    padding-bottom: 40px !important;
+}
