--- a/MyApp/src/app/component/CUSTOMERS/cust-header/cust-header.component.html
+++ b/MyApp/src/app/component/CUSTOMERS/cust-header/cust-header.component.html
@@ -7,12 +7,13 @@
                 <li class="nav-item">
                     <a class="navbar-brand" routerLink="/app-cust-home" (click)="showButton(2)" [class.phase-active]="activeButton === 2"> <i class="fas fa-home"></i>Ticketing Tool</a>
                 </li>
-                <li class="nav-item">
+                <!--<li class="nav-item">
                     <a class="notification" routerLink="app-cust-raise-complaint" (click)="loader()">
                         <i class="fas fa-chalkboard-teacher"></i>Raise Complaint</a>
                 </li>
+                -->
                 <li class="nav-item">
-                    <a class="notification" id="a1" routerLink="app-view-previous-complaint" (click)="loader()"> <i class="far fa-clipboard"></i> View Previous Complaint</a>
+                    <a class="notification" id="a1" routerLink="app-view-previous-complaint" (click)="loader()"><i class="fas fa-clipboard"></i> View Previous Complaint</a>
                 </li>
             </ul>
         </div>
@@ -29,7 +30,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="notification">
+                    <a href="#" class="Logout">
                         <span>Logout</span>
                         <i class="fas fa-sign-out-alt"></i>
                     </a>
