--- a/MyApp/src/app/component/header/header.component.html
+++ b/MyApp/src/app/component/header/header.component.html
@@ -1,6 +1,6 @@
 <ngx-spinner [fullScreen]="true" type="ball-clip-rotate-multiple" size="medium">
 </ngx-spinner>
-<nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top row " id="topheader">
+<nav class="navbar navbar-expand-sm navbar-dark fixed-top row " id="topheader">
     <div class="col-md-8">
 
         <div class="collapse navbar-collapse float-left" id="ftco-nav">
@@ -45,7 +45,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="notification">
+                    <a href="#" class="Logout">
                         <span>Logout</span>
                         <i class="fas fa-sign-out-alt"></i>
                     </a>
