--- a/MyApp/src/app/component/service-engineer/engg-header/engg-header.component.html
+++ b/MyApp/src/app/component/service-engineer/engg-header/engg-header.component.html
@@ -32,7 +32,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="notification">
+                    <a href="#" class="Logout">
                         <span>Logout</span>
                         <i class="fas fa-sign-out-alt"></i>
                     </a>
