--- a/MyApp/src/app/component/view-all-complaints/view-all-complaints.component.html
+++ b/MyApp/src/app/component/view-all-complaints/view-all-complaints.component.html
@@ -70,45 +70,50 @@
                         <label style="margin-top:12px ;margin-left: 20px;font-size: medium;"><b>Status:</b></label>
                     </div>
                     <div class="col-md-4">
-                        <select class="abc " placeholder="Change Status">
-                        <option *ngFor="let machine of Machinelist;let i=index " value="{{machine.name}} "
-                            [selected]="i==0 ">{{machine.name}} </option>
-                    </select>
+                        <div class="form-group">
+                            <select class="form-control" [(ngModel)]="c_status">
+                            <option></option>      
+                            <option value="Open">Open</option>
+                            <option value="Close">Close</option>
+                            <option value="Pending">Pending</option>
+                            
+                          </select>
+
+                        </div>
 
                     </div>
-
-                </div>
-                <div class='row' *ngIf='listFilter'>
-                    <div class='col-md-6'>
-                        <h4> Filtered by: {{content}}</h4>
+                    <div class='row' *ngIf='listFilter'>
+                        <div class='col-md-6'>
+                            <h4> Filtered by: {{content}}</h4>
+                        </div>
                     </div>
-                </div>
-                <div class='table-responsive'>
-                    <table class='table'>
-                        <thead>
-                            <tr>
-                                <th>Id</th>
-                                <th>Complaint</th>
-                                <th>Date</th>
-                                <th>Status</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr *ngFor="let user of complaint | filter:searchText">
-                                <td>
-                                    {{user.c_id}}
-                                </td>
-                                <td>
-                                    {{user.c_desc}}
-                                </td>
-                                <td>
-                                    {{user.c_date | date:'dd/MM/yyy'}}
+                    <div class='table-responsive'>
+                        <table class='table'>
+                            <thead>
+                                <tr>
+                                    <th>Id</th>
+                                    <th>Complaint</th>
+                                    <th>Date</th>
+                                    <th>Status</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr *ngFor="let user of complaint | filter:searchText | searchPipe1: c_status">
+                                    <td>
+                                        {{user.c_id}}
+                                    </td>
+                                    <td>
+                                        {{user.c_desc}}
+                                    </td>
+                                    <td>
+                                        {{user.c_date | date:'dd/MM/yyy'}}
 
-                                </td>
-                                <td>{{user.c_status}}</td>
-                            </tr>
-                        </tbody>
-                    </table>
+                                    </td>
+                                    <td>{{user.c_status}}</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
