--- a/MyApp/src/app/component/chart/chart.component.css
+++ b/MyApp/src/app/component/chart/chart.component.css
@@ -2,7 +2,11 @@
   margin-top: 20px;
   border-radius: 5px;
   color: black;
+  width: 100%;
   position: relative;
+}
+.col-md-6{
+  margin-top:10px;
 }
 .charts{
   height:40vh; 
@@ -12,27 +16,20 @@
   float: left;
   margin-left: 0px;
 }
-.fa{
+.chart-container{
+  margin-top: 30px;
+}
+.fas{
   font-size: 30px;
-  margin-left: 100px;
   margin-top: 10px;
+  float: right;
   color:white;
 }
-.h4{
-  text-align: center;
-}
-.count{
-  font-size: 20px;
-  font-weight: bold;  
-  margin-left: 70px;
-}
-.lable{
-  margin-left: 60px;
-  float:left
-}
-.panel{
-  margin-top: 20px;
-  border-radius: 5px;
+.fa{
+  font-size: 30px;
+  margin-top: 10px;
+  float: right;
+  color:white;
 }
 .row .form-control{
   color: #555;
@@ -40,17 +37,12 @@
 	height: 37px;
 	padding: 2px 15px 2px 35px;
   border-radius: 50px;
-  /* margin-bottom: 5px; */
   margin-top: 5px;
 }
 .row .form-control::placeholder{
   color: rgba(0, 0, 0, 0.7);
 	font-size: 14px;
 	text-transform: capitalize;
-}
-.panel-heading{
-  border-bottom: 1px solid #ddd;
-  background-color: #F5F5F5;
 }
 .col-md-2{
   margin-left: 20px;
@@ -67,14 +59,14 @@
 .table-responsive{
   margin-top: 10px;
 }
-  .panel12{
-  width: 100%;
+.lable{
+  font-weight: bold;  
 }
-.row123{
-  background-color: #F5F5F5;
+.count{
+  font-size: 20px;}
+.mb-4{
+  margin-top: 25px;
 }
-b{
-  text-align: center;
-  margin-bottom: 5px;
-  margin-top: 5px;
+.card-body{
+  padding-top: 0px;
 }
