--- a/MyApp/src/app/component/chart/chart.component.html
+++ b/MyApp/src/app/component/chart/chart.component.html
@@ -1,13 +1,18 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 
 <body>
   <div class="container">
-    <div class=" row row1">
+      <div class=" col-lg-12 mb-4">    
+    <div class=" card">
+      <div class="card-header">
+        <h3>Customer Status</h3>
+      </div>
+      <div class="card-body">
+      <div class="row">
       <div class="col-md-3 offset-md-3 ">
         <button class="btn btn-success" (click)="userCount()">
-          <span class="count"> {{userCount1}}</span><span><i class="fa fa-users" aria-hidden="true"></i></span><br>
-          <span class="lable">Users</span>
+          <span class="count userCount"> {{userCount1}}</span><span><i class="fa fa-users" aria-hidden="true"></i></span><br>
+          <span class="lable lable1">Users</span>
         </button>
       </div>
       <div class="col-md-3">
@@ -23,58 +28,63 @@
         </button>
       </div>
     </div>
-    <div class="row">
+    </div>
+    </div>
+  </div>
+  <div class=" col-lg-12 ">    
+        <div class="row">
       <div class="col-md-6">
-        <div class=" panel panel-default">
-          <div class="panel-body"> 
+        <div class=" card">
+          <div class="card-body">
             <div class="chart-container">
               <canvas id="complaintsStatusCart"></canvas>
             </div>
           </div>
-        </div>
-      </div>
-      <div class="col-md-6">
-        <div class="panel panel-default">
-          <div class="panel-body">
-            <div class="chart-container">
-              <canvas id="canvas"></canvas>
-            </div>
-          </div>
-        </div>
-      </div>
     </div>
-      <div class="panel panel-default panel12">
-        <div class="panel-heading">
-          <h3>Complaint Status</h3>
-        </div>
-        <div class="panel-body">
-        <div class="col-md-4 ">
-          <button class="btn btn-success"  (click)="initializeItems1()">
-            <span class="count"> {{openCount1}}</span><span><i class="fa fa-users" aria-hidden="true"></i></span><br>
-            <span class="lable">Open Complaint</span>
-          </button>
-        </div>
-        <div class="col-md-4">
-          <button class="btn btn-danger"  (click)="enggCount()">
-            <span class="count">{{closedCount1}}</span><span><i class="fa fa-users" aria-hidden="true"></i></span><br>
-            <span class="lable">Close Complaint</span>
-          </button>
-        </div>
-        <div class="col-md-4">
-          <button class="btn btn-warning">
-            <span class="count">{{pendingCount1}}</span><span><i class="fa fa-users" aria-hidden="true"></i></span><br>
-            <span class="lable">Pending Complaint</span>
-          </button>
-        </div>
+</div>
+<div class="col-md-6">
+  <div class=" card">
+    <div class="card-body">
+      <div class="chart-container">
+        <canvas id="canvas"></canvas>
       </div>
-      </div>
-
-
-
-
-
-     <div class="panel panel-default">
-      <div class="panel-heading"> 
+</div>
+</div>
+</div>
+</div>
+</div>
+<div class=" col-lg-12 mb-4">    
+  <div class=" card ">
+    <div class="card-header">
+      <h3>Complaint Status</h3>
+    </div>
+    <div class="card-body">
+    <div class="row">
+    <div class="col-md-4 ">
+      <button class="btn btn-success" (click)="userCount()">
+        <span class="count userCount"> {{openCount1}}</span><span><i class="fas fa-clipboard" aria-hidden="true"></i></span><br>
+        <span class="lable lable1">Open Complaint</span>
+      </button>
+    </div>
+    <div class="col-md-4">
+      <button class="btn btn-danger"  (click)="enggCount()">
+        <span class="count">{{closedCount1}}</span><span><i class="fas fa-clipboard" aria-hidden="true"></i></span><br>
+        <span class="lable">Closed Complaint</span>
+      </button>
+    </div>
+    <div class="col-md-4">
+      <button class="btn btn-warning">
+        <span class="count">{{pendingCount1}}</span><span><i class="fas fa-clipboard" aria-hidden="true"></i></span><br>
+        <span class="lable">Pending Complaint</span>
+      </button>
+    </div>
+  </div>
+  </div>
+  </div>
+</div>
+      <div class="col-lg-12">
+     <div class="card">
+      <div class="card-header"> 
         <div class="row row123 ">
           <div class='col-md-2'><b>Search</b> 
           </div>
@@ -85,7 +95,7 @@
                </div>
             </div>
          </div>
-         <div class="panel-body">
+         <div class="card-body">
         <div class='table-responsive'>
           <table class='table'>
               <thead>
@@ -108,18 +118,7 @@
                           {{user.c_date | date:'dd/MM/yyy'}}
                       </td>
                       <td>
-                        <button 
-                        *ngIf="user.c_status === 'Open'"
-                        class="btn btn-success">Open
-                        </button>
-                        <button 
-                        *ngIf="user.c_status === 'Close'"
-                        class="btn btn-danger">Close
-                        </button>
-                        <button 
-                        *ngIf="user.c_status === 'Pending'"
-                        class="btn btn-warning">Pending
-                        </button>
+                      {{user.c_status}}
                       </td>
                     </tr>
                 </tbody>
@@ -127,5 +126,6 @@
             </div>       
           </div>
        </div> 
-    </div>
-  </body>
+       </div>
+       </div>
+      </body>
