--- a/MyApp/src/app/component/header/header.component.css
+++ b/MyApp/src/app/component/header/header.component.css
@@ -1,17 +1,14 @@
   #p1 {
       text-align: center;
   }
-  
   nav {
       padding-top: 15px !important;
       padding-bottom: 15px !important;
   }
-  
   .fas {
       margin-left: 10px !important;
       margin-right: 10px !important;
   }
-  
   .nav-link.dropdown-toggle {
       background-color: #343a40;
       color: white;
@@ -19,36 +16,29 @@
       font-size: 16px;
       border: none;
   }
-  
   .nav-item.dropdown {
       position: relative;
       display: inline-block;
   }
-  
   .dropdown-menu a {
       color: black;
       padding: 12px 16px;
       text-decoration: none;
       display: block;
   }
-  
   .dropdown-menu a:hover {
       background-color: rgb(30, 135, 233);
   }
-  
   .nav-item.dropdown :hover .dropdown-content {
       display: block;
   }
-  
   .nav-item.dropdown :hover.nav-link.dropdown-toggle {
       background-color: #3e8e41;
   }
-  
   .container {
       margin-left: 0px !important;
       margin-right: 0px !important;
   }
-  
   .navbar-brand {
       color: white;
       text-decoration: none;
@@ -57,11 +47,9 @@
       display: inline-block;
       border-radius: 2px;
   }
-  
   .navbar-brand:hover {
       background: #3e8e41;
   }
-  
   .notification {
       color: white;
       text-decoration: none;
@@ -70,11 +58,9 @@
       display: inline-block;
       border-radius: 2px;
   }
-  
   .notification:hover {
       background: #3e8e41;
   }
-  
   .fas .badge {
       position: absolute;
       top: -10px;
@@ -84,31 +70,31 @@
       background-color: red;
       color: white;
   }
-  
   i {
       font-size: x-large;
   }
-  
   .loading {
       color: white;
   }
-  
   .phase-active {
       background-color: #3e8e41;
       border-radius: 1px;
       box-shadow: 0 0 1px 2px hsla(0, 0%, 100%, .8);
   }
-  
   .active {
       background-color: #3e8e41;
   }
-  
   .phase-active {
       background-color: #3e8e41;
       border-radius: 1px;
       box-shadow: 0 0 1px 2px hsla(0, 0%, 100%, .8);
   }
-  
   .active {
       background-color: #3e8e41;
+  }
+  .btn{
+      width: 20%;
+  }
+  .btn-primary{
+      float: left;
   }
