--- a/MyApp/src/app/component/header/header.component.html
+++ b/MyApp/src/app/component/header/header.component.html
@@ -45,7 +45,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#logoutModal" data-toggle="modal" class="notification">
+                    <a href="#" class="notification">
                         <span>Logout</span>
                         <i class="fas fa-sign-out-alt"></i>
                     </a>
@@ -57,22 +57,3 @@
         <span class="oi oi-menu"></span> <b>Menu</b>
     </button>
 </nav>
-
-<div id="logoutModal" class="modal fade" role="dialog">
-    <div class="modal-dialog modal-confirm">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h4 class="modal-title">Are you sure?</h4>
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-            </div>
-            <div class="modal-body">
-                <p>Do you really want to Logout ?</p>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-primary" data-dismiss="modal">No</button>
-                <button type="button" class="btn btn-danger" data-dismiss="modal" name="delete"
-                    href="#">Yes</button>
-            </div>
-        </div>
-    </div>
-</div>
