--- a/MyApp/src/app/component/view-all-complaints/view-all-complaints.component.html
+++ b/MyApp/src/app/component/view-all-complaints/view-all-complaints.component.html
@@ -72,7 +72,7 @@
                     <div class="col-md-4">
                         <div class="form-group">
                             <select class="form-control" [(ngModel)]="c_status">
-                            <option></option>      
+                            <option>Select Status</option>      
                             <option value="Open">Open</option>
                             <option value="Close">Close</option>
                             <option value="Pending">Pending</option>
