--- a/MyApp/src/app/component/footer/footer.component.html
+++ b/MyApp/src/app/component/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="py-5 bg-dark">
     <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Your Website 2017</p>
+        <p class="m-0 text-center text-white"><b>Complaint Ticketing Tool:Website 2020</b></p>
     </div>
 </footer>
