--- a/MyApp/src/app/component/header/header.component.html
+++ b/MyApp/src/app/component/header/header.component.html
@@ -25,7 +25,7 @@
                 </li>
 
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="fas fa-list-ul"></i> Complaints
+                    <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="fas fa-clipboard"></i> Complaints
                     </a>
                     <div class="dropdown-menu" aria-labelledby="dropdown04">
                         <a class="dropdown-item" routerLink="app-view-all-complaints" (click)="assign_complaint()">View Complaints</a>
@@ -42,6 +42,12 @@
                     <a href="#" class="notification">
                         <span>Notification</span>
                         <i class="fas fa-bell">  <span class="badge">3</span></i>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="Logout">
+                        <span>Setting</span>
+                        <i class="fas fa-cog"></i>
                     </a>
                 </li>
                 <li class="nav-item">
