--- a/MyApp/src/app/component/service-engineer/engg-header/engg-header.component.html
+++ b/MyApp/src/app/component/service-engineer/engg-header/engg-header.component.html
@@ -31,6 +31,13 @@
 
                     </a>
                 </li>
+
+                <li class="nav-item">
+                    <a href="#" class="Logout">
+                        <span>Setting</span>
+                        <i class="fas fa-cog"></i>
+                    </a>
+                </li>
                 <li class="nav-item">
                     <a href="#" class="Logout">
                         <span>Logout</span>
