--- a/MyApp/src/app/component/CUSTOMERS/customer-list/customer-list.component.css
+++ b/MyApp/src/app/component/CUSTOMERS/customer-list/customer-list.component.css
@@ -17,10 +17,7 @@ h3 {
     padding-top: 0px;
 }
 .dropdown-menu .viewItem:hover {
-    background-color: rgb(152, 125, 226);
-}
-.dropdown-menu .deleteItem:hover{
-    background-color: rgb(246, 70, 70);
+    background-color: #32c4b1
 }
 .table {
     margin-top: 20px;
@@ -48,4 +45,8 @@ h3 {
     margin-left: 30%;
     margin-top: 20px;
     align-items: center;
+}
+button .close{
+    padding: 0px;
+    border: none;
 }
