--- a/MyApp/src/app/component/CUSTOMERS/customer-list/customer-list.component.html
+++ b/MyApp/src/app/component/CUSTOMERS/customer-list/customer-list.component.html
@@ -41,7 +41,7 @@
                         <div class="dropdown-menu">
                             <a class="dropdown-item viewItem" [routerLink]="['edit',item.u_id]"
                                 (click)="customerEdit()">Edit</a>
-                            <a class="dropdown-item deleteItem" (click)="openModal(item)">Delete</a>
+                            <a class="dropdown-item deleteItem viewItem" (click)="openModal(item)">Delete</a>
                             <a class="dropdown-item viewItem" [routerLink]="['view',item.u_id]"
                                 (click)="viewCustomer()">View</a>
                         </div>
@@ -56,7 +56,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h4 class="modal-title">Are you sure?</h4>
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+               <span><button class="close" data-dismiss="modal">&times;</button></span>
             </div>
             <div class="modal-body">
                 <p>Do you really want to delete these records? This process cannot be undone.</p>
