--- a/MyApp/src/app/component/SERVICE-ENGG/service-engg-list/service-engg-list.component.html
+++ b/MyApp/src/app/component/SERVICE-ENGG/service-engg-list/service-engg-list.component.html
@@ -36,7 +36,7 @@
                             <div class="dropdown-menu">
                                 <a class="dropdown-item viewItem" [routerLink]="['edit',item.u_id]"
                                     (click)="editServiceEngg()">Edit</a>
-                                <a class="dropdown-item deleteItem" (click)="openModal(item)">Delete</a>
+                                <a class="dropdown-item deleteItem viewItem" (click)="openModal(item)">Delete</a>
                                 <a class="dropdown-item viewItem" [routerLink]="['view',item.u_id]"
                                     (click)="loader()">View</a>
                             </div>
