--- a/MyApp/src/app/component/header/header.component.html
+++ b/MyApp/src/app/component/header/header.component.html
@@ -45,7 +45,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="Logout">
+                    <a  href="#logoutModal" data-toggle="modal" data-target="#logoutModal" class="Logout">
                         <span>Logout</span>
                         <i class="fas fa-sign-out-alt"></i>
                     </a>
@@ -57,3 +57,20 @@
         <span class="oi oi-menu"></span> <b>Menu</b>
     </button>
 </nav>
+
+<div id="logoutModal" class="modal fade" role="dialog">
+    <div class="modal-dialog modal-confirm">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">Are you sure?</h4>
+                <span><button class="close" data-dismiss="modal" >&times;</button></span>
+            </div>
+            <div class="modal-body">
+                <p>Are you sure you want to Log out.</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger deletebtn" data-dismiss="modal" name="delete" >Logout</button>
+            </div>
+        </div>
+    </div>
+</div>
