--- a/MyApp/src/app/component/login/login.component.html
+++ b/MyApp/src/app/component/login/login.component.html
@@ -11,7 +11,7 @@
                 </div>
                 <h2> Login</h2>
                 <form id="form_id" class="" name="myform" [formGroup]="formGroup" (ngSubmit)="onSubmit()">
-                    <div class="form-group">
+                    <div class="form-group" >
                         <label for="exampleInputEmail1">User Name :</label>
                         <input type="text" name="username" class="form-control" formControlName="email" id="username" aria-describedby="emailHelp" placeholder="Enter username">
                     </div>
@@ -54,7 +54,7 @@
             </div>
         </div>
     </div>
-</body>
+
 <div class="modal fade" id="myModal" role="dialog">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -63,14 +63,23 @@
                 <span><button class="close" data-dismiss="modal">&times;</button></span>
             </div>
             <div class="modal-body">
-                <form role="form">
+                <form name="form" (ngSubmit)="f.form.valid && submitdata()" #f="ngForm"  novalidate>
                     <div class="form-group">
-                        <label for="usrname"><span><i class="fas fa-envelope"></i></span> Email</label>
-                        <input type="email" class="form-control" id="usrname" placeholder="Enter Your Registred Email ">
+                        <label>Email<span id="indicate">*</span></label>
+                        <input type="email" name="email" class="form-control" 
+                        [(ngModel)]="model.email" #email="ngModel" 
+                        [ngClass]="{ 'is-invalid':(f.dirty || f.touched) && f.submitted && email.invalid }"
+                        placeholder="Enter your registered email address" 
+                        required email/>
+                        <div *ngIf="(f.dirty || f.touched) && f.submitted && email.invalid" class="invalid-feedback">
+                            <div *ngIf="email.errors.required">Email is required</div>
+                            <div *ngIf="email.errors.email">Email must be a valid email address</div>
+                        </div>
                     </div>
-                    <button type="submit" class="btn btn-success btn-block"><span><i class="fas fa-sign-in-alt"></i></span> Submit</button>
+                    <button type="submit" class="btn btn-success btn-block" [disabled]="!f.form.valid" ><span><i class="fas fa-sign-in-alt"></i></span> Submit</button>
                 </form>
             </div>
         </div>
     </div>
 </div>
+</body>
